auto-test/tests/chapter_14/invalid_declarations/extra_credit/deref_label.c

int main(void) {
    lbl:
    *lbl;
    return 0;
}